# CPP_Quest

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CPP_Quest.sln  README.md
CPP_Quest/: CMakeLists.txt  CPP_Quest.cpp  CPP_Quest.h  CPP_Quest.vcxproj  CPP_Quest.vcxproj.filters  GameLoader.cpp  GameLoader.h  QuestCharacter.cpp  QuestCharacter.h  QuestDialogue.cpp  QuestDialogue.h  QuestGame.cpp  QuestGame.h  QuestLearner.cpp  QuestLearner.h  Source_Main.cpp  UserInputFunctions.cpp
CPP_Quest/GameFiles/: A.xml  LearnerLessons.xml  Shaun.txt  Shaun.xml  Wasdf.xml
test/: CMakeLists.txt  CharacterTest.cpp  Character_Test.cpp  GameLoader_Test.cpp  QuestGame_Test.cpp
test/testSupportDocs/GameFiles/: shaun.xml
test/testSupportDocs/QuestFiles/: TheBasics.xml
